--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,29 @@
-# Build stage
-FROM node:20-alpine AS build
+# # Build stage
+# FROM node:20-alpine AS build
+# WORKDIR /app
+
+# COPY package*.json ./
+# RUN npm install
+# COPY . .
+# RUN npm run build
+
+# # Runtime stage
+# FROM nginx:alpine
+# COPY --from=build /app/build /usr/share/nginx/html
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
+
+
+FROM node:20-alpine
+
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
+
 COPY . .
-RUN npm run build
 
-# Runtime stage
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+CMD ["npm", "start"]
