both Register and Login

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Frontend
 REACT_PORT=3000
-REACT_APP_AUTH_BASE_URL=http://auth-service:3001
-REACT_APP_CORE_BASE_URL=http://core-service:3002
+REACT_APP_AUTH_BASE_URL=http://0.0.0.0:3001
+REACT_APP_CORE_BASE_URL=http://0.0.0.0:3002
 
 # Auth service
 AUTH_PORT=3001
@@ -18,8 +18,12 @@ SMTP_PORT=1025
 SMTP_USER=
 SMTP_PASS=
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://0.0.0.0:3000
 
 # Core service
 CORE_PORT=3002
-AUTH_PORT=3001
+CORE_DB_HOST=host.docker.internal 
+CORE_DB_USER=root
+CORE_DB_PASSWORD=password
+CORE_DB_NAME=core_db
+COREDB_PORT=3306
