docker file modifed

--- a/.env
+++ b/.env
@@ -1,28 +1,28 @@
 # Frontend
 REACT_PORT=3000
-REACT_APP_AUTH_BASE_URL=http://0.0.0.0:3001
-REACT_APP_CORE_BASE_URL=http://0.0.0.0:3002
+REACT_APP_AUTH_BASE_URL=http://localhost:3001
+REACT_APP_CORE_BASE_URL=http://localhost:3002
 
 # Auth service
 AUTH_PORT=3001
 JWT_SECRET=t3JqAUIvO69LVP1FiwYjKiD17IsDTJl
 
-DB_HOST=host.docker.internal   # or mysql if DB is containerized
+DB_HOST=localhost   # or mysql if DB is containerized
 DB_USER=root
 DB_PASSWORD=password
 DB_NAME=auth_db
 DB_PORT=3306
 
-SMTP_HOST=host.docker.internal # or mailhog
+SMTP_HOST=localhost # or mailhog
 SMTP_PORT=1025
 SMTP_USER=
 SMTP_PASS=
 
-FRONTEND_URL=http://0.0.0.0:3000
+FRONTEND_URL=http://localhost:3000
 
 # Core service
 CORE_PORT=3002
-CORE_DB_HOST=host.docker.internal 
+CORE_DB_HOST=localhost
 CORE_DB_USER=root
 CORE_DB_PASSWORD=password
 CORE_DB_NAME=core_db
