--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nodemailer": "^7.0.12",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "cors": "^2.8.5"
   }
 }
